Updated web/index.html to enhance UI and styling for the Rubik's Cube Solver application.

--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,7 @@
         border-radius: 4px;
         margin-bottom: 10px;
         font-size: 1rem;
+        rows: 5;
       }
 
       button {
@@ -92,7 +93,7 @@
         id="scramble"
         placeholder="Enter your scramble (e.g., U2 B' L' R' F' D F2 U L' F2)"
         required
-        rows="4"
+        rows="5"
       ></textarea>
       <button id="solvebtn" type="submit">Solve it!</button>
     </form>
